# embassy-template

./: Cargo.toml  README.md  cargo-generate.toml  ci.sh  pre-script.rhai
.cargo/: config.toml
.github/workflows/: ci.yaml  update-chip-choices.yml
scripts/: README.md  test.sh  update-chip-choices.py
src/: main.rs
