[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }

embassy-stm32 = { version = "0.6", features = [
    "defmt",
    "{{ chip | downcase }}",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }


[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1

[profile.dev]
debug = 2
lto = true
opt-level = "z"
codegen-units = 1
